noinst_PROGRAMS = kingsim

kingsim_SOURCES = kingsim.cc simulator.cc
kingsim_LDADD = ../src/libvfrnav.la -lreadline @LIBS@ @GTKMM_LIBS@ @GLIBMM_LIBS@ @GIOMM_LIBS@ @PILOTLINK_LIBS@ @BOOST_LIBS@ \
	@SQLITE3X_LIBS@ @OPENPTY_LIBS@ @GEOS_LIBS@ @CLIPPER_LIBS@ @OPENJPEG_LIBS@ @LIBXMLPP_LIBS@
kingsim_LDFLAGS = @BOOST_LDFLAGS@ @GEOS_LDFLAGS@ @CLIPPER_LDFLAGS@

noinst_HEADERS = simulator.h

AM_CFLAGS = @MY_CFLAGS@
AM_CXXFLAGS = @MY_CXXFLAGS@
AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include \
	@GTKMM_CFLAGS@ @GLIBMM_CFLAGS@ @GIOMM_CFLAGS@ @SQLITE_CFLAGS@ @SQLITE3X_CFLAGS@ @ZFSTREAM_CFLAGS@ \
	@PILOTLINK_CFLAGS@ @BOOST_CPPFLAGS@ @GEOS_CPPFLAGS@ @CLIPPER_CPPFLAGS@ @LIBXMLPP_CFLAGS@
